# frame-admin-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  deploy.sh
.github/: dependabot.yml
src/: config.rs  database.rs  google_oauth.rs  gphotos_api.rs  image_proc.rs  main.rs  model.rs  route_handler.rs  session_mgr.rs  task_mgr.rs  template_mgr.rs
templates/: base.html.tera  config.html.tera  index.html.tera  manage.html.tera  monitor.html.tera  revoke.html.tera  sync.html.tera  telemetry.html.tera
