[package]
name = "admin_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
image = { version = "0.25.1", features = ["jpeg"] }
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
log = "0.4.17"
postgres = { version = "0.19.5", features = ["with-uuid-1"] }
rand = "0.8.5"
route-recognizer = "0.3.1"
serde = { version = "1.0.158", features = ["derive"] }
tera = { version = "1.18.1", default-features = false }
tiny_http = "0.12.0"
ureq = { version = "2.6.2", features = ["json"] }
url = "2.3.1"
serde_json = "1.0.1"
