[package]
name = "admin_api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
image = { version = "0.25.9", features = ["jpeg"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.4.0"
log = "0.4.29"
postgres = { version = "0.19.12", features = ["with-uuid-1", "with-chrono-0_4"] }
rand = "0.9.2"
route-recognizer = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tera = { version = "1.20.1", default-features = false }
tiny_http = "0.12.0"
ureq = { version = "3.1.4", features = ["json"] }
url = "2.5.7"
serde_json = "1.0.148"
